--- a/BiblioHub/BiblioHub/templates/clients.html
+++ b/BiblioHub/BiblioHub/templates/clients.html
@@ -50,4 +50,5 @@
             {% endif %}
         </span>
     </div>
+    <a href="{% url 'createclient' %}" class="button">Nuevo Cliente</a>
 {% endblock %}
