--- a/BiblioHub/BiblioHub/templates/books.html
+++ b/BiblioHub/BiblioHub/templates/books.html
@@ -59,5 +59,5 @@
             {% endif %}
         </span>
     </div>
-    <a href="{% url 'create' %}" class="button">Nuevo libro</a>    
+    <a href="{% url 'createbook' %}" class="button">Nuevo libro</a>    
 {% endblock %}
