--- a/BiblioHub/BiblioHub/templates/header.html
+++ b/BiblioHub/BiblioHub/templates/header.html
@@ -7,7 +7,7 @@
         </div>
 
         <ul>
-            {% if USER.is_authenticated %}
+            {% if user.is_authenticated %}
                 <li><a href="{% url 'books' %}">Libros</a></li>
                 <li><a href="{% url 'clients' %}">Clientes</a></li>
                 <li><a href="#">Prestamos</a></li>
