--- a/BiblioHub/BiblioHub/templates/book_form.html
+++ b/BiblioHub/BiblioHub/templates/book_form.html
@@ -7,5 +7,6 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Guardar</button>
+        <a href="{% url 'createclient' %}" class="button">Nuevo cliente</a> 
     </form>
 {% endblock %}
